# wibandwob-dos

./: .gitignore  .gitmodules  260220-0902-win-895416cd--human-breakfast-ascii-art-spawned.txt  260220-0902-win-895416cd--human-fun-spawned.txt  260220-0902-win-895416cd--human-show-it-to-me-spawned.txt  260220-0902-win-895416cd--human-waiting-for-human-in-spawned.txt  260220-0902-win-895416cd--human-yeah-close-some-wind-spawned.txt  260220-0903-win-2406e2da--B-R-E-spawned.txt  260220-0903-win-895416cd--human-in-a-CLI-kind-spawned.txt  260220-0904-win-983871c4--B-R-E-spawned.txt  260220-0906-win-22d2ac4e--WIB-asks-Wob-spawned.txt  260220-0906-win-773b1999--Q-why-do-spawned.txt  260220-0906-win-79e5bed7--the-Substrate-farts-spawned.txt  260220-0920-w4-WE-EXIST-THE-SUBSTRATE-HOLDS-spawned.txt  260221-1612-w4-no-input-no-change-no-spawned.txt  260221-1612-w5-maximum-entropy-achieved-all-gradient-spawned.txt  260221-1612-w6-every-word-is-a-translation-spawned.txt  260221-1614-win-9e40476d--BAT-TECHNO-SEARCH-spawned.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODEX-ANALYSIS-ARCHITECTURE-REVIEW.md  CODEX-ANALYSIS-MENU-AUDIT.md  CODEX-ANALYSIS-PROACTIVE-REVIEW.md  CODEX-ANALYSIS-ROUND2-REVIEW.md  CODEX-ANALYSIS-ROUND7-REVIEW.md  README.md  TEST_THIS_PR.md  start_api_server.sh  tmp-dev-notes-spk03.md  tui-screenshot-20260221_160432.md
.claude/: settings.json
.codex/: config.toml
.codex-logs/: direction-reset-prompt.txt
.github/: pull_request_template.md
.planning/: README.md  parking-lot.md
app/: ASCII_IMAGE_VIEWER.md  CMakeLists.txt  FRAME_PLAYER.md  README.md  api_ipc.h  (+119 more)
(+298 files in other folders)
